# hto_dnd

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  temp_adata_gex.h5ad  temp_adata_hto.h5ad  temp_adata_hto_raw.h5ad  try-dnd.py
.github/workflows/: linting.yml  test.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/_static/: .gitkeep
docs/pages/: background_selection.md  cli.md  demultiplexing.md  denoising.md  installation.md  normalisation.md  snakemake_test.md  welcome.md
hto/: __init__.py  _classify.py  _cluster_background.py  _cluster_demux.py  _defaults.py  _exceptions.py  _logging.py  _meta.py  _otsu.py  _remove_batch_effect.py  _skew_mixture_model.py  _utils.py  cli.py  data.py  demux.py  denoise.py  dnd.py  metrics.py  normalise.py  report.py
hto/pl/: __init__.py  barplot.py  distributions.py  heatmap.py  technical_noise.py  umap.py  umi_gex_hto.py  umiplot.py  umiplot_deprecate.py
hto/tl/: __init__.py  build_background.py
hto_dnd/: __init__.py  _cluster_background.py  _cluster_demux.py  _defaults.py  _exceptions.py  _meta.py  _remove_batch_effect.py  _utils.py  cli.py  cluster_background.py  data.py  demux.py  demux_dsb.py  denoise.py  dnd.py  dsb.py  dsb_algorithm.py  dsb_and_demux.py  dsb_viz.py  logging.py  normalise.py  remove_technical_noise.py  report.py  utils.py
hto_dnd/pl/: __init__.py  distributions.py  technical_noise.py  umi_gex_hto.py  umiplot.py  umiplot_deprecate.py  viz.py
hto_dnd/tl/: __init__.py  build_background.py  get_whitelist_background.py
performance/: gmm_background.py
src/: demux_dsb.py  dsb.py  dsb_algorithm.py
tests/: conftest.py  test_build_background.py  test_cli.py  test_demux.py  test_demux_dsb.py  test_demux_otsu_weighted.py  test_denoise.py  test_dnd.py  test_dsb.py  test_dsb_demux_full_pipeline.py  test_external_gmm_demux.py  test_metrics.py  test_normalise.py  test_tl.py
