[project]
name = "hto-dnd"
version = "0.1.4"
description = "A method to demultiplex hashtagged single-cell data by first applying a denoising and normalizing step adapted from DSB (Denoised and Scaled by Background)."
dependencies = [
    "pandas >= 1.5.0",            
    "numpy >= 1.21.0",            
    "matplotlib >= 3.5.0",        
    "seaborn >= 0.12.0",         
    "scipy >= 1.8.0",            
    "scikit-learn >= 1.2.0", 
    "scikit-image >= 0.19.0",
    "anndata >= 0.8.0",          
    "pyyaml >= 6.0",             
]
authors = [
    { name = "Hussen Mohammed Ibrahim", email = "ibrahih3@mskcc.org" },
    { name = "Tobias Krause", email = "krauset@mskcc.org" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
dsb = "hto_dnd.cli:main"
demux_dsb = "hto_dnd.cli:main"
dsb_and_demux = "hto_dnd.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"