[project]
name = "hto-dnd"
version = "1.0.0.a1"
description = "A method to demultiplex hashtagged single-cell data."
dependencies = [
    "click >= 8.0.0",
    "pandas >= 1.5.0",
    "numpy >= 1.21.0",
    "matplotlib >= 3.5.0",
    "seaborn >= 0.12.0",
    "scipy >= 1.8.0",
    "scikit-learn >= 1.2.0",
    "scikit-image >= 0.19.0",
    "anndata >= 0.8.0",
    "pyyaml >= 6.0",
]
authors = [
    { name = "Hussen Mohammed Ibrahim", email = "ibrahih3@mskcc.org" },
    { name = "Tobias Krause", email = "krauset@mskcc.org" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["hto_dnd"]

[project.scripts]
dnd = "hto_dnd.cli:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"